feat: добавлены компоненты header main footer

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Mesto</title>
   </head>
 
-  <body>
+  <body class="body">
     <noscript>Вам нужно велючить JavaScript, чтобы продолжить пользоваться сервисом</noscript>
     <div id="root"></div>
   </body>
