--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Mesto</title>
-  </head>
-
-  <body class="body">
-    <noscript>Вам нужно велючить JavaScript, чтобы продолжить пользоваться сервисом</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="/manifest.json"/><title>Mesto</title><script defer="defer" src="/static/js/main.7cb62ea1.js"></script><link href="/static/css/main.3bee420d.css" rel="stylesheet"></head><body class="body"><noscript>Вам нужно велючить JavaScript, чтобы продолжить пользоваться сервисом</noscript><div id="root"></div></body></html>
